[package]
name = "imageflow_ex"
version = "0.2.0"
authors = []
edition = "2018"

[lib]
name = "imageflow_ex"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.26.0"
lazy_static = "1.4.0"
imageflow_core = { git = "https://github.com/imazen/imageflow", tag = "v1.7.3-rc67" }
imageflow_types = { git = "https://github.com/imazen/imageflow", tag = "v1.7.3-rc67" }
